--- a/about.html
+++ b/about.html
@@ -23,7 +23,9 @@
                 <a href="./careers.html" class="menu__link">CAREERS</a>
               </li>
               <li class="menu__item">
-                <a href="./about.html" class="menu__link">ABOUT US</a>
+                <a href="./about.html" class="menu__link menu__link-active"
+                  >ABOUT US</a
+                >
               </li>
               <li class="menu__item">
                 <a href="./contact.html" class="menu__link">CONTACT</a>
@@ -39,84 +41,8 @@
           </div>
         </section>
 
-        <!-------------SERVICES-------------------->
-
-        <section class="services__container">
-          <div class="categories__container">
-            <h2 class="categories__title title">SERVICES</h2>
-            <div class="container">
-              <ul class="img-project">
-                <li class="img1 flex-element">
-                  <div class="img1-wrap">
-                    <img
-                      src="./img/services1.png"
-                      alt="work"
-                      width="340"
-                      height="200"
-                    />
-                    <p class="img1-txt">
-                      Roadway Transportation As a carrier to some of the biggest
-                      shippers in the world, Nomad Express uses data analysis
-                      and ELD tracking technology to cut shipper costs and
-                      consistently ensure on-time delivery. ​ By allowing data
-                      to drive our core business processes, Nomad Express is
-                      able to promise something other carriers can't; on-time
-                      delivery at cheaper shipping costs!
-                    </p>
-                  </div>
-                  <div class="project-work">
-                    <p class="project">Roadway Transportation</p>
-                  </div>
-                </li>
-
-                <li class="img1 flex-element">
-                  <div class="img1-wrap">
-                    <img
-                      src="./img/services2.png"
-                      alt="work"
-                      width="340"
-                      height="200"
-                    />
-                    <p class="img1-txt">
-                      At Nomad Express, we believe that offering high-paying
-                      loads to owner operators is the bare minimum that a
-                      dispatcher should offer.Not only do we provide fully
-                      customizable work plans and load offers, but our
-                      "Dedicated Dispatch Team" works 24/7 for each owner
-                      operator to provide support, no matter the time of day!
-                    </p>
-                  </div>
-                  <div class="project-work">
-                    <p class="project">Carrier Dispatching</p>
-                  </div>
-                </li>
-                <li class="img1 flex-element">
-                  <div class="img1-wrap">
-                    <img
-                      src="./img/services3.png"
-                      alt="work"
-                      width="340"
-                      height="200"
-                    />
-                    <p class="img1-txt">
-                      As the needs of the world grow, developing long-term
-                      relationships with reliable carriers that can meet your
-                      logistical needs is becoming increasingly rare. ​ At Nomad
-                      Express, we are able to utilize our decades of experience
-                      and valuable connections to connect AAA rated motor
-                      carriers to established shippers, all across the nation!
-                    </p>
-                  </div>
-                  <div class="project-work">
-                    <p class="project">Freight Brokerage</p>
-                  </div>
-                </li>
-              </ul>
-            </div>
-          </div>
-        </section>
         <!-------------BRAND-------------------->
-        <section class="page__brands brands">
+        <!--<section class="page__brands brands">
           <div class="brands__container">
             <h2 class="brands__title title">CLIENTS</h2>
             <div class="brands__items">
@@ -125,7 +51,7 @@
               </div>
             </div>
           </div>
-        </section>
+        </section>-->
 
         <!----------INPUT------------------------->
 
@@ -173,17 +99,6 @@
         </section>
 
         <!-------------FOOTER-------------------->
-        <!--<section class="footer__container">
-          <div class="project-work">
-            <a
-              href="https://github.com/NovikoffOleh"
-              class="footer-txt"
-              target="_blank"
-            >
-              <p>© 2023 OlehNovikoff</p>
-            </a>
-          </div>
-        </section>-->
         <footer class="footer">
           <div class="footer__container">
             <div class="footer__body body-footer">
