--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           <nav class="header__menu menu">
             <ul class="menu__list">
               <li class="menu__item">
-                <a href="./home.html" class="menu__link">HOME</a>
+                <a href="./index.html" class="menu__link">HOME</a>
               </li>
               <li class="menu__item">
                 <a href="./careers.html" class="menu__link">CAREERS</a>
@@ -215,7 +215,7 @@
                     <div class="menu-footer__title">Pages</div>
                     <ul class="menu-footer__list">
                       <li class="menu-footer__item">
-                        <a href="./home.html" class="menu-footer__link">HOME</a>
+                        <a href="./index.html" class="menu-footer__link">HOME</a>
                       </li>
                       <li class="menu-footer__item">
                         <a href=".careers.html" class="menu-footer__link"
